--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </table>
         </div>
         <table>
-            <thead>
+            <!-- <thead>
                 <tr>
                     <th>Data</th>
                     <th>Ingresso</th>
@@ -81,21 +81,27 @@
 
                 </tr>
 
-            </thead>
+            </thead> -->
             <tbody>
-                <tr>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tr>
+                <div class="inserttab">
+                    <label for="date"></label><input id="date" type="text">
+                    <label for="entry"></label><input id="entry" type="text">
+                    <label for="exit"></label><input id="exit" type="text">
+                    <label for="greenpass"></label><input id="greenpass"
+                        type="text">
+                    <label for="name"></label><input id="name" type="text">
+                    <label for="surname"></label><input id="surname"
+                        type="text">
+                    <label for="company"></label><input id="company"
+                        type="text">
+                    <label for="goal"></label><input id="goal" type="text">
+                    <label for="referent"></label><input id="referent"
+                        type="text">
+                    <label for="countrynum"></label><input id="countrynum"
+                        type="text">
+                    <label for="notes"></label><input id="notes" type="text">
+                    <input type="button" value="INVIA" id="sender" />
+                </div>
             </tbody>
         </body>
     </html>
