--- a/index.html
+++ b/index.html
@@ -85,22 +85,17 @@
             </thead> -->
             <tbody>
                 <div class="inserttab">
-                    <label for="date">DATA</label><input id="date" type="text">
-                    <label for="entry">ENTRATA</label><input id="entry" type="text">
-                    <label for="exit">USCITA</label><input id="exit" type="text">
-                    <label for="greenpass">GREENPASS</label><input id="greenpass"
-                        type="text">
-                    <label for="name">NOME</label><input id="name" type="text">
-                    <label for="surname">COGNOME</label><input id="surname"
-                        type="text">
-                    <label for="company">AZIENDA</label><input id="company"
-                        type="text">
-                    <label for="goal">MOTIVO</label><input id="goal" type="text">
-                    <label for="referent">REFERENTE</label><input id="referent"
-                        type="text">
-                    <label for="countrynum">TARGA</label><input id="countrynum"
-                        type="text">
-                    <label for="notes">NOTE</label><input id="notes" type="text">
+                    <label for="date">DATA<input class="theinput" id="date" type="text"></label><br /><br />
+                    <label for="entry">ENTRATA</label><input id="entry" type="text"><br /><br />
+                    <label for="exit">USCITA</label><input id="exit" type="text"><br /><br />
+                    <label for="greenpass">GREENPASS</label><input id="greenpass" type="text"><br /><br />
+                    <label for="name">NOME</label><input id="name" type="text"><br /><br />
+                    <label for="surname">COGNOME</label><input id="surname" type="text"><br /><br />
+                    <label for="company">AZIENDA</label><input id="company" type="text"><br /><br />
+                    <label for="goal">MOTIVO</label><input id="goal" type="text"><br /><br />
+                    <label for="referent">REFERENTE</label><input id="referent" type="text"><br /><br />
+                    <label for="countrynum">TARGA</label><input id="countrynum" type="text"><br /><br />
+                    <label for="notes">NOTE</label><input id="notes" type="text"><br /><br />
                     <input type="button" value="INVIA" id="sender" />
                 </div>
             </tbody>
