--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             var month = d.getMonth() + 1;
             var ora = d.getHours();
             var minuti = d.getMinutes();
+
             if (month < 10) {
                 month = "0" + month;
             }
@@ -27,6 +28,9 @@
             var day = d.getDate();
             if (day < 10) {
                 day = "0" + day;
+            }
+            if (minuti < 10) {
+                minuti = "0" + minuti;
             }
             var year = d.getFullYear();
             var output = day + "/" + month + "/" + year;
@@ -243,9 +247,9 @@
             <input type="button" value="INVIA" id="sender" name="sender" onclick="insertnew()" />
         </div>
     </tbody>
-<!-- ################# area di modifica ############################# -->
- 
-<!-- ################# end area di modifica ############################# -->  
+    <!-- ################# area di modifica ############################# -->
+
+    <!-- ################# end area di modifica ############################# -->
 </body>
 
 </html>
