inserita pagian update.php

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
         <div class="inserttab" id="insertedit">
             <label for="date">DATA<input class="theinput" id="date2" type="text" placeholder="dd/mm/aaaa"></label><input
-                type="button" onclick=" getnowExit()" value="ADESSO USCITA" /><br /><br />
+                type="button" onclick=" getnowExit()" value="ADESSO" /><br /><br />
             <label for="entry">ENTRATA</label>
             <span id="entrytime2">
                 <select id="entry2">
